charts/mediaserver/flaresolverr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  labels:
    app: flaresolverr
spec:
  type: ClusterIP
  ports:
    - port: 8191
      targetPort: 8191
      protocol: TCP
      name: http
  selector:
    app: flaresolverr
