charts/mediaserver/flaresolverr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flaresolverr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: flaresolverr.png
    gethomepage.dev/name: flaresolverr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - flaresolverr.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flaresolverr
          namespace: mediaserver
          port: 5656
